redirect path for contage page

--- a/views/service.jade
+++ b/views/service.jade
@@ -13,10 +13,10 @@ block content
               span
               span
             .nav-right.nav-menu
-              a.nav-item.is-active
+              a.nav-item.is-active(href='/')
                 | Home
               a.nav-item
-                | Contact Us
+                | Contact Us(href='/')
   .section
     .container
       .columns
