redirect path for contact page

--- a/views/service.jade
+++ b/views/service.jade
@@ -15,8 +15,8 @@ block content
             .nav-right.nav-menu
               a.nav-item.is-active(href='/')
                 | Home
-              a.nav-item
-                | Contact Us(href='/')
+              a.nav-item(href='/')
+                | Contact Us
   .section
     .container
       .columns
