--- a/views/service.jade
+++ b/views/service.jade
@@ -15,7 +15,7 @@ block content
             .nav-right.nav-menu
               a.nav-item.is-active(href='/')
                 | Home
-              a.nav-item(href='/')
+              a.nav-item(href='/contact')
                 | Contact Us
   .section
     .container
